Create a new NotificationChannel, build and send the notification when the onReceive in the AlarmReceiver is called

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+local.properties
+
 start/.gradle/5.1.1/gc.properties
 start/.gradle/5.1.1/executionHistory/executionHistory.bin
 start/.gradle/5.1.1/executionHistory/executionHistory.lock
