Add dependencies for FCM and create MyFirebaseMessagingService

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-iid:20.2.4'
     implementation 'com.google.firebase:firebase-messaging:20.2.4'
     implementation 'android.arch.work:work-runtime:1.0.1'
+    apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle plugin
 }
